--- a/package.json
+++ b/package.json
@@ -56,9 +56,11 @@
   },
   "dependencies": {
     "@jupyterlab/application": "^4.0.6",
+    "@jupyterlab/apputils": "^4.0.6",
     "@jupyterlab/coreutils": "^6.0.6",
     "@jupyterlab/filebrowser": "^4.0.6",
     "@jupyterlab/services": "^7.0.6",
+    "@jupyterlab/translation": "^4.0.6",
     "@jupyterlab/ui-components": "^4.0.6"
   },
   "devDependencies": {
