--- a/package.json
+++ b/package.json
@@ -61,10 +61,11 @@
     "@jupyterlab/filebrowser": "^4.0.6",
     "@jupyterlab/services": "^7.0.6",
     "@jupyterlab/translation": "^4.0.6",
-    "@jupyterlab/ui-components": "^4.0.6"
+    "@jupyterlab/ui-components": "^4.0.6",
+    "@jupyterlab/builder": "^4.0.0",
+    "react": "^18.2.0"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^4.0.0",
     "@types/json-schema": "^7.0.11",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
