--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "@jupyterlab/filebrowser": "^4.0.6",
     "@jupyterlab/services": "^7.0.6",
     "@jupyterlab/translation": "^4.0.6",
-    "@jupyterlab/ui-components": "^4.0.6"
+    "@jupyterlab/ui-components": "^4.0.6",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^4.0.0",
