--- a/package.json
+++ b/package.json
@@ -59,9 +59,9 @@
     "@jupyterlab/apputils": "^4.0.6",
     "@jupyterlab/coreutils": "^6.0.6",
     "@jupyterlab/filebrowser": "^4.0.6",
-    "@jupyterlab/services": "^7.0.6",
     "@jupyterlab/translation": "^4.0.6",
-    "@jupyterlab/ui-components": "^4.0.6"
+    "@jupyterlab/ui-components": "^4.0.6",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^4.0.0",
