--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,6 +53,15 @@ jobs:
         # Prepare .mo file
         jupyterlab-translate compile . rdm_binderhub_jlabextension -l ja_JP
 
+        # List the installed modules
+        #npm i
+        #npm list -a
+
+        jlpm install
+        jlpm run build:lib:prod
+        ls -la node_modules/@jupyterlab
+        jlpm run build:labextension
+
         python -m pip install .
 
         jupyter server extension list 2>&1 | grep -ie "rdm_binderhub_jlabextension.*OK"
