--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,26 +60,21 @@ jobs:
         jupyter labextension list 2>&1 | grep -ie "rdm-binderhub-jlabextension.*OK"
         python -m jupyterlab.browser_check
 
-        check-manifest -v
-
-        pip install build
-        python -m build --sdist
-        cp dist/*.tar.gz myextension.tar.gz
-        pip uninstall -y myextension jupyterlab
-        rm -rf myextension
-
-        npm pack
-        mv rdm-binderhub-jlabextension-*.tgz myextension-nodejs.tgz
-
-    - uses: actions/upload-artifact@v2
+    - name: Check Release
+      uses: jupyter-server/jupyter_releaser/.github/actions/check-release@v2
       with:
-        name: myextension-sdist
-        path: myextension.tar.gz
+        token: ${{ secrets.GITHUB_TOKEN }}
 
-    - uses: actions/upload-artifact@v2
+    - name: TEST
+      run: |
+        set -eux
+        ls -la
+
+    - name: Upload Distributions
+      uses: actions/upload-artifact@v3
       with:
-        name: myextension-nodejs
-        path: myextension-nodejs.tgz
+        name: rdm_binderhub_jlabextension-releaser-dist-${{ github.run_number }}
+        path: .jupyter_releaser_checkout/dist
 
   draft_release:
     needs: build
