--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,29 +60,31 @@ jobs:
         jupyter labextension list 2>&1 | grep -ie "rdm-binderhub-jlabextension.*OK"
         python -m jupyterlab.browser_check
 
-        check-manifest -v
+  check_release:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Base Setup
+        uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
+      - name: Check Release
+        uses: jupyter-server/jupyter_releaser/.github/actions/check-release@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-        pip install build
-        python -m build --sdist
-        cp dist/*.tar.gz myextension.tar.gz
-        pip uninstall -y myextension jupyterlab
-        rm -rf myextension
+      - name: TEST
+        run: |
+          set -eux
+          ls -la
 
-        npm pack
-        mv rdm-binderhub-jlabextension-*.tgz myextension-nodejs.tgz
-
-    - uses: actions/upload-artifact@v2
-      with:
-        name: myextension-sdist
-        path: myextension.tar.gz
-
-    - uses: actions/upload-artifact@v2
-      with:
-        name: myextension-nodejs
-        path: myextension-nodejs.tgz
+      - name: Upload Distributions
+        uses: actions/upload-artifact@v3
+        with:
+          name: rdm_binderhub_jlabextension-releaser-dist-${{ github.run_number }}
+          path: .jupyter_releaser_checkout/dist
 
   draft_release:
-    needs: build
+    needs: check_release
     runs-on: ubuntu-latest
 
     steps:
@@ -90,10 +92,7 @@ jobs:
       uses: actions/checkout@v2
     - uses: actions/download-artifact@v2
       with:
-        name: myextension-sdist
-    - uses: actions/download-artifact@v2
-      with:
-        name: myextension-nodejs
+        name: rdm_binderhub_jlabextension-releaser-dist-${{ github.run_number }}
     - name: release
       uses: actions/create-release@v1
       id: create_release
