--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -26,23 +26,23 @@ jobs:
         id: populate-release
         uses: jupyter-server/jupyter_releaser/.github/actions/populate-release@v2
         with:
-          token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.event.inputs.branch }}
           release_url: ${{ github.event.inputs.release_url }}
           steps_to_skip: ${{ github.event.inputs.steps_to_skip }}
 
-      - name: Finalize Release
-        id: finalize-release
-        env:
-          # The following are needed if you use legacy PyPI set up
-          # PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
-          # PYPI_TOKEN_MAP: ${{ secrets.PYPI_TOKEN_MAP }}
-          # TWINE_USERNAME: __token__
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        uses: jupyter-server/jupyter-releaser/.github/actions/finalize-release@v2
-        with:
-          token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
-          release_url: ${{ steps.populate-release.outputs.release_url }}
+      # - name: Finalize Release
+      #   id: finalize-release
+      #   env:
+      #     # The following are needed if you use legacy PyPI set up
+      #     # PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+      #     # PYPI_TOKEN_MAP: ${{ secrets.PYPI_TOKEN_MAP }}
+      #     # TWINE_USERNAME: __token__
+      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      #   uses: jupyter-server/jupyter-releaser/.github/actions/finalize-release@v2
+      #   with:
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     release_url: ${{ steps.populate-release.outputs.release_url }}
 
       - name: "** Next Step **"
         if: ${{ success() }}
