--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,16 +1,24 @@
 name: Release
 
 on:
-  push:
-    branches: ["*"]
-
+  workflow_dispatch:
+    inputs:
+      version_spec:
+        description: "New Version Specifier"
+        default: "next"
+        required: false
+      branch:
+        description: "The branch to target"
+        required: false
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        ref: ${{ github.event.inputs.branch }}
     - name: Install node
       uses: actions/setup-node@v1
       with:
@@ -61,65 +69,46 @@ jobs:
         jupyter labextension list 2>&1 | grep -ie "rdm-binderhub-jlabextension.*OK"
         python -m jupyterlab.browser_check
 
-  check_release:
+  draft_release:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.inputs.branch }}
       - name: Base Setup
         uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
       - name: Check Release
         uses: jupyter-server/jupyter_releaser/.github/actions/check-release@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: TEST
-        run: |
-          set -eux
-          ls -la
-
-      - name: Upload Distributions
-        uses: actions/upload-artifact@v3
+      - name: release
+        uses: actions/create-release@v1
+        id: create_release
         with:
-          name: rdm_binderhub_jlabextension-releaser-dist-${{ github.run_number }}
-          path: .jupyter_releaser_checkout/dist
-
-  draft_release:
-    needs: check_release
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - uses: actions/download-artifact@v2
-      with:
-        name: rdm_binderhub_jlabextension-releaser-dist-${{ github.run_number }}
-    - name: release
-      uses: actions/create-release@v1
-      id: create_release
-      with:
-        draft: true
-        prerelease: false
-        release_name: ${{ github.ref }}
-        tag_name: ${{ github.ref }}
-        body_path: CHANGELOG.md
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-    - name: upload pip package
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: myextension.tar.gz
-        asset_name: rdm_binderhub_jlabextension-${{ github.ref }}.tar.gz
-        asset_content_type: application/gzip
-    - name: upload nodejs package
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: myextension-nodejs.tgz
-        asset_name: rdm-binderhub-jlabextension-${{ github.ref }}.tgz
-        asset_content_type: application/gzip
+          draft: true
+          prerelease: false
+          release_name: ${{ github.event.inputs.version_spec }}
+          tag_name: ${{ github.event.inputs.branch }}
+          body_path: CHANGELOG.md
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+      - name: upload pip package
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: .jupyter_releaser_checkout/dist/rdm_binderhub_jlabextension-${{ github.event.inputs.version_spec }}.tar.gz
+          asset_name: rdm_binderhub_jlabextension-${{ github.event.inputs.version_spec }}.tar.gz
+          asset_content_type: application/gzip
+      - name: upload nodejs package
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: .jupyter_releaser_checkout/dist/rdm-binderhub-jlabextension-${{ github.event.inputs.version_spec }}.tgz
+          asset_name: rdm-binderhub-jlabextension-${{ github.event.inputs.version_spec }}.tgz
+          asset_content_type: application/gzip
