--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,11 +2,11 @@ name: Release
 
 on:
   push:
-    branches: ["*"]
+    tags: '*'
 
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -61,8 +61,9 @@ jobs:
         jupyter labextension list 2>&1 | grep -ie "rdm-binderhub-jlabextension.*OK"
         python -m jupyterlab.browser_check
 
-  check_release:
+  draft_release:
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -72,54 +73,15 @@ jobs:
         uses: jupyter-server/jupyter_releaser/.github/actions/check-release@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-
+      - name: "** Next Step **"
+        run: |
+          echo "Optional): Review Draft Release: ${{ steps.check-release.outputs }}"
       - name: TEST
         run: |
           set -eux
-          ls -la
-
+          ls -la .jupyter_releaser_checkout/dist/rdm_binderhub_jlabextension-releaser-dist-${{ github.run_number }}
       - name: Upload Distributions
         uses: actions/upload-artifact@v3
         with:
           name: rdm_binderhub_jlabextension-releaser-dist-${{ github.run_number }}
           path: .jupyter_releaser_checkout/dist
-
-  draft_release:
-    needs: check_release
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - uses: actions/download-artifact@v2
-      with:
-        name: rdm_binderhub_jlabextension-releaser-dist-${{ github.run_number }}
-    - name: release
-      uses: actions/create-release@v1
-      id: create_release
-      with:
-        draft: true
-        prerelease: false
-        release_name: ${{ github.ref }}
-        tag_name: ${{ github.ref }}
-        body_path: CHANGELOG.md
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-    - name: upload pip package
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: myextension.tar.gz
-        asset_name: rdm_binderhub_jlabextension-${{ github.ref }}.tar.gz
-        asset_content_type: application/gzip
-    - name: upload nodejs package
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: myextension-nodejs.tgz
-        asset_name: rdm-binderhub-jlabextension-${{ github.ref }}.tgz
-        asset_content_type: application/gzip
