Add "Sync to GRDM" item to file menu

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "files": [
     "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
     "style/**/*.{css,js,eot,gif,html,jpg,json,png,svg,woff2,ttf}",
-    "style/index.js"
+    "style/index.js",
+    "schema/*.json"
   ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -109,7 +110,8 @@
       }
     },
     "extension": true,
-    "outputDir": "rdm_binderhub_jlabextension/labextension"
+    "outputDir": "rdm_binderhub_jlabextension/labextension",
+    "schemaDir": "schema"
   },
   "jupyter-releaser": {
     "hooks": {
