--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "@jupyterlab/filebrowser": "^4.0.6",
     "@jupyterlab/services": "^7.0.6",
     "@jupyterlab/translation": "^4.0.6",
-    "@jupyterlab/ui-components": "^4.0.6"
+    "@jupyterlab/ui-components": "^4.0.6",
+    "html-react-parser": "^4.2.2"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^4.0.0",
