--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "build": "jlpm build:lib && jlpm build:labextension:dev",
     "build:labextension": "jupyter labextension build .",
     "build:labextension:dev": "jupyter labextension build --development True .",
-    "build:lib": "tsc --sourceMap && mkdir -p lib/images && cp src/images/*.svg lib/images/ && cp src/images/*.svg rdm_binderhub_jlabextension/nbextension/",
-    "build:lib:prod": "tsc && mkdir -p lib/images && cp src/images/*.svg lib/images/ && cp src/images/*.svg rdm_binderhub_jlabextension/nbextension/",
+    "build:lib": "tsc --sourceMap && mkdir -p lib/images && cp src/images/*.svg lib/images/",
+    "build:lib:prod": "tsc && mkdir -p lib/images && cp src/images/*.svg lib/images/",
     "build:prod": "jlpm clean && jlpm build:lib:prod && jlpm build:labextension",
     "clean": "jlpm clean:lib",
     "clean:all": "jlpm clean:lib && jlpm clean:labextension && jlpm clean:lintcache",
