--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "watch": "run-p watch:src watch:labextension",
     "watch:labextension": "jupyter labextension watch .",
     "watch:src": "tsc -w --sourceMap",
-    "prepare": "jlpm prepare:images && jlpm prepare:translations",
+    "prepare:resources": "jlpm prepare:images && jlpm prepare:translations",
     "prepare:images": "cp src/images/*.svg rdm_binderhub_jlabextension/nbextension/",
     "prepare:translations": "pip install jupyterlab-translate && jlpm extract:translations && jlpm update:translations && jlpm compile:translations",
     "extract:translations": "jupyterlab-translate extract . rdm_binderhub_jlabextension",
