--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install node
       uses: actions/setup-node@v3
       with:
-       node-version: 16
+       node-version: 18
     - name: Install Python
       uses: actions/setup-python@v2
       with:
@@ -93,3 +93,9 @@ jobs:
         pip install jupyterlab
         jupyter labextension list 2>&1 | grep -ie "rdm-binderhub-jlabextension.*OK"
         python -m jupyterlab.browser_check --no-chrome-test
+        jlpm install
+        jlpm build:prod
+        cd ./ui-tests
+        jlpm install
+        jlpm playwright install
+        jlpm playwright test
