--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Install node
       uses: actions/setup-node@v3
       with:
-       node-version: 16
+       node-version: 18
     - name: Install Python
       uses: actions/setup-python@v2
       with:
@@ -55,6 +55,12 @@ jobs:
 
         jupyter labextension list 2>&1 | grep -ie "rdm-binderhub-jlabextension.*OK"
         python -m jupyterlab.browser_check
+        jlpm install
+        cd ./ui-tests
+        jlpm install
+        jlpm playwright install
+        jlpm playwright test
+        cd ..
 
         pip install build
         python -m build --sdist
